bugfixes and improvements
-Split twitch login info into separate config
   *Data will be auto migrated from AsyncTwitchConfig.json/EnhancedTwitchChat.ini
-Fix a crash when login info is incorrect
   *Fix error message in chat when login info is incorrect
-Now properly handles when the user enters invalid login info, and waits for them to enter correct login info before attempting to reconnect

--- a/EnhancedTwitchChat/EnhancedTwitchChat.csproj
+++ b/EnhancedTwitchChat/EnhancedTwitchChat.csproj
@@ -216,8 +216,10 @@
     <Compile Include="Chat\websocket-sharp\WebSocketException.cs" />
     <Compile Include="Chat\websocket-sharp\WebSocketFrame.cs" />
     <Compile Include="Chat\websocket-sharp\WebSocketState.cs" />
+    <Compile Include="Config\RequestBotConfig.cs" />
+    <Compile Include="Config\TwitchLoginConfig.cs" />
     <Compile Include="UI\ColorExtensions.cs" />
-    <Compile Include="Config.cs" />
+    <Compile Include="Config\ChatConfig.cs" />
     <Compile Include="Chat\ChatMover.cs" />
     <Compile Include="Chat\LockToggle.cs" />
     <Compile Include="Images\AnimationController.cs" />
