Fully working twitch chat keyboard available while song request manager window is up! (We're called song request amanger now), If you wish to use an external ! command, put a space in front of it. ATM, all commands that start with ! are directed to the bot.

--- a/EnhancedTwitchIntegration/SongRequestConsole.csproj
+++ b/EnhancedTwitchIntegration/SongRequestConsole.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{CDBD5008-0F51-408E-B89C-6142CB5C70E5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SongRequestConsole</RootNamespace>
-    <AssemblyName>SongRequestConsole</AssemblyName>
+    <RootNamespace>SongRequestManager</RootNamespace>
+    <AssemblyName>SongRequestManager</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -103,6 +103,7 @@
   <ItemGroup>
     <Compile Include="Bot\ChatCommands.cs" />
     <Compile Include="Bot\commands.cs" />
+    <Compile Include="Bot\Keyboard.cs" />
     <Compile Include="Bot\ListManager.cs" />
     <Compile Include="Bot\RequestBot.cs" />
     <Compile Include="Bot\RequestBotListViewController.cs" />
